Fixed deprecated function call